list activity works but cant access to items items using onclick, yet.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <activity android:name=".DatabaseActivity" />
         <activity android:name=".PostDetailActivity" />
         <activity android:name=".ItemsActivity" />
-        <activity android:name=".NewPostActivity"></activity>
+        <activity android:name=".NewPostActivity" />
+        <activity android:name=".ListActivity"></activity>
     </application>
 
 </manifest>
