--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,40 +36,41 @@ dependencies {
 
 
 
-    compile("com.google.android.gms:play-services-base:10.0.1") {
+    compile("com.google.android.gms:play-services-base:11.2.0") {
         force = true;
     }
 
-    compile('com.google.firebase:firebase-core:10.0.1') {
+    compile('com.google.firebase:firebase-core:11.2.0') {
         force = true;
     }
-    compile('com.google.firebase:firebase-auth:10.0.1') {
+    compile('com.google.firebase:firebase-auth:11.2.0') {
         force = true;
     }
-    compile('com.google.firebase:firebase-analytics:10.0.1') {
+    compile('com.google.firebase:firebase-analytics:11.2.0') {
         force = true;
     }
-    compile('com.google.firebase:firebase-database:10.0.1') {
+    compile('com.google.firebase:firebase-database:11.2.0') {
         force = true;
     }
-    compile('com.google.firebase:firebase-storage:10.0.1') {
+    compile('com.google.firebase:firebase-storage:11.2.0') {
         force = true;
     }
-    compile('com.google.firebase:firebase-messaging:10.0.1') {
+    compile('com.google.firebase:firebase-messaging:11.2.0') {
         force = true;
     }
+    compile 'com.google.android.gms:play-services-maps:11.2.0'
     compile 'com.android.support:appcompat-v7:26.0.0'
     compile 'com.android.support:recyclerview-v7:26.0.0'
     compile 'com.android.support:design:26.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.firebase:firebase-auth:10.0.1'
-    compile 'com.google.firebase:firebase-database:10.0.1'
-    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-auth:11.2.0'
+    compile 'com.google.firebase:firebase-database:11.2.0'
+    compile 'com.google.firebase:firebase-core:11.2.0'
     compile 'com.firebaseui:firebase-ui-database:1.2.0'
     compile 'com.android.support:support-v4:26.0.0'
-    compile 'com.google.android.gms:play-services-maps:10.0.1'
-    compile 'com.google.android.gms:play-services-location:10.0.1'
-    compile 'com.google.android.gms:play-services-maps:10.0.1'
+    compile 'com.google.android.gms:play-services-maps:11.2.0'
+    compile 'com.google.android.gms:play-services-location:11.2.0'
+    compile 'com.google.android.gms:play-services:11.2.0'
     testCompile 'junit:junit:4.12'
 }
 
