--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     compile 'com.android.support:support-v4:26.0.0'
     compile 'com.google.android.gms:play-services-location:11.2.0'
     compile 'com.google.android.gms:play-services:11.2.0'
+    compile 'com.android.support:cardview-v7:26.0.0'
     testCompile 'junit:junit:4.12'
 }
 
